# neodistpy

./: CHANGELOG.md  README.md  pyproject.toml
docs/source/: conf.py  index.rst  tutorial.rst  usage.rst
neodistpy/: __init__.py  bambi_custom.py  fsst.py  msnburr.py  msnburr_iia.py
neodistpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_fsst_dist.py  test_msnburr_dist.py  test_msnburr_iia_dist.py
